FIX #5 - additional elements need to be accounted for for auto zoom on iOS.

--- a/public/assets/css/scss/core/_presentation.scss
+++ b/public/assets/css/scss/core/_presentation.scss
@@ -38,8 +38,7 @@ body {
 
 /*-- iOS form field text zooming --*/
 
-input.form-control,
-textarea.form-control {
+.form-control {
 	font-size: 16px;
 
 	@include mq($mq-large) {
